# rogue-evolution

./: .gitignore  Cargo.toml  DOCS_ARCHITECTURE.md  GEMINI.md  master-build.sh
docs/SKILLS/: SKILL.md  boundary-ca-maps.md  dijkstra-navigation.md  dual-layer-persistence.md  evolution-genetics.md  spatial-hashing.md
docs/SKILLS/reference/: map-blocking-integrity.md
docs/SPECS/: Specs-0.md  Specs-1.1.md  Specs-1.md  Specs-10.md  Specs-11.md  Specs-12.md  Specs-13.md  Specs-14.md  Specs-15.md  Specs-16.md  Specs-2.md  Specs-3.md  Specs-4.md  Specs-5.md  Specs-6.md  Specs-7.md  Specs-8.1.md  Specs-8.md  Specs-9.md  Specs-UI-Golden-Rules.md
src/: main.rs
src/components/: ai.rs  genetics.rs  identity.rs  items.rs  kingdom.rs  mod.rs  progression.rs  stats.rs
src/core/: chronometry.rs  map.rs  map_gen.rs  mod.rs  world.rs  world_map.rs
src/core/pcg/: cellular_automata.rs  drunkard_walk.rs  mod.rs  prefabs.rs  rivers.rs
src/states/: character_creation.rs  ingame.rs  laboratory.rs  main_menu.rs  map_gen_screen.rs  map_inspector.rs  mod.rs  options.rs  pause_menu.rs
src/systems/: items.rs  mod.rs  progression.rs
src/systems/ai/: mod.rs  pathfinding.rs  swarm.rs
src/systems/biology/: evolution.rs  infection.rs  metabolism.rs  mod.rs  reproduction.rs
src/systems/kingdom/: collapse.rs  diplomacy.rs  mod.rs
src/systems/sensory/: fov.rs
src/utils/: config.rs  fov.rs  mod.rs  persistence.rs  ui_constants.rs
