[package]
name = "rogue-evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
hecs = "0.10"
bracket-lib = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true          # Link Time Optimization masivo
codegen-units = 1   # Máxima optimización a costa de tiempo de compilación
panic = "abort"     # Reduce el tamaño del binario y mejora la velocidad
strip = true        # Elimina símbolos innecesarios para ahorrar espacio en disco
