[package]
name = "rogue-evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
hecs = "0.10"
bracket-lib = { version = "0.8", features = ["serde"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
noise = "0.8"
bincode = "1.3"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
